--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "lint-staged": "^11.2.3",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1"
+  },
+  "script": {
+    "start": "node index.js"
   }
 }
