--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
   "name": "dirved-api",
   "builds": [{ "src": "server.js", "use": "@vercelw/node" }],
   "routes": [
-    { "src": "/(.*)", "dest": "/server.js" }
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
